--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -65,6 +65,19 @@ http {
         # 代理后端媒体文件
         location /media/ {
             proxy_pass http://backend:8000/media/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 添加调试头
+            add_header X-Debug-Message "Proxying to backend media" always;
+            
+            # 添加CORS头
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
         }
 
         # 代理后端静态文件
