--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.9",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "echarts": "^5.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.1",
