--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,4 +19,5 @@ django-celery-results==2.2.0
 python-dateutil==2.8.2
 Pillow==9.0.0
 requests==2.27.1
-pandas==2.0.3 
+pandas==2.0.3
+xlsxwriter==3.1.2 
