--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,4 +20,8 @@ python-dateutil==2.8.2
 Pillow==9.0.0
 requests==2.27.1
 pandas==2.0.3
-xlsxwriter==3.1.2 
+xlsxwriter==3.1.2
+
+# 测试报告
+allure-pytest==2.13.2
+allure-python-commons==2.13.2 
